# RaySnake

./: .clang-format  Application.cpp  Application.h  CMakeLists.txt  Game.cpp  Game.h  Level.cpp  Level.h  README.md  main.cpp  vcpkg.json
Menu/: MainMenu.cpp  MainMenu.h
include/: Application.h  BaseParams.h  Food.h  Game.h  GameObject.h  Level.h  MainMenu.h  Menu.h  Player.h
res/: app.rc
src/: Application.cpp  Application.h  BaseParams.h  CMakeLists.txt  Game.cpp  Game.h  Level.cpp  LoaderParams.h  handleEvents.cpp  handleEvents.h  main.cpp
src/Core/: Application.cpp  Application.h  BaseParams.h  Game.cpp  Game.h  Level.cpp  Level.h
src/Graphics/: FontManger.cpp  FontManger.h  TextureManger.cpp  TextureManger.h
src/Managers/: FontManger.cpp  FontManger.h  SoundManger.cpp  SoundManger.h  TextureManger.cpp  TextureManger.h
src/Menu/: AboutMenu.cpp  AboutMenu.h  DifficultlyMenu.cpp  DifficultlyMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h
src/Objects/: Food.cpp  Food.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h
